we added videos cards!

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: left;
 }
 
@@ -17,7 +17,8 @@
   font-size: calc(10px + 2vmin);
   color: white;
   padding: 10px;
-}
+  
+} */
 
 
 
