--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,26 @@ code {
   box-shadow: 3px 4px darkblue;
   background: white;
 }
+
+.search-bar {
+  overflow: hidden;
+  background-color: #e9e9e9;
+  position: absolute;
+  top: 20px;
+  left: 200px;
+}
+
+.search-icon button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.logo {
+  align-items: center;
+}
